# trading_robot

./: Cargo.toml  README.md
algorithms/: Cargo.toml  README.md
algorithms/src/: atr.rs  candle.rs  higher_high_lower_low.rs  lib.rs  pivot_high_low.rs  renko.rs  support_resistance.rs  true_range.rs
book/: book.toml
book/src/: SUMMARY.md  overview.md  strategy.md  todo.md  tools.md
oanda/: Cargo.toml  README.md
oanda/src/: account.rs  client.rs  error.rs  host.rs  lib.rs  macros.rs  model.rs
oanda/src/client/: account.rs  instrument.rs  order.rs  trade.rs
oanda/src/client/account/: model.rs
oanda/src/client/trade/: open_trades_request.rs  trades_request.rs
oanda/src/model/: account.rs  candle.rs  date_time.rs  instrument.rs  order.rs  pricing.rs  trade.rs  transaction.rs
oanda/src/model/candle/: algorithms_compat.rs
oanda/src/model/transaction/: conversion_factors.rs  stop_loss.rs
trader/: Cargo.toml
trader/src/: error.rs  main.rs
