[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[dev-dependencies]
deref-derive = "0"
pretty_assertions = "1"
rand = "0"
svg = "0.13.0"
tracing = "0"
