[package]
name = "oanda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["alloc", "serde", "pure-rust-locales"] }
deref-derive = "0.1.0"
error-stack = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
parse-display = "0.8.0"
reqwest = { version = "0.11.14", features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.2.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["tokio-macros", "macros"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
