[package]
name = "oanda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithms = { path = "../algorithms" }
chrono = { version = "0", features = ["alloc", "serde", "pure-rust-locales"] }
deref-derive = "0"
error-stack = "0"
lazy_static = "1"
log = "0"
parse-display = "0"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "json", "gzip", "stream", "deflate", "brotli"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
thiserror = "1"
tokio = { version = "1", features = ["tokio-macros", "macros"] }
tracing = "0"

[dev-dependencies]
pretty_env_logger = "0"
