[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oanda = { path = "../oanda" }
algorithms = { path = "../algorithms" }
error-stack = { version = "0", features = ["spantrace"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
